[package]
name = "tree_collections"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "tree_collections"
path = "src/lib.rs"

[dependencies]
criterion = "0.3.3"
rand = "0.7.3"

[[bench]]
name = "benchmarks"
harness = false